Fix spacing between buttons and add delete functionality.

--- a/assets/button.scss
+++ b/assets/button.scss
@@ -8,18 +8,19 @@ $buttonColor: mix($darkBlue, #fff, 15%);
     display: inline-flex;
     color: #222;
     align-items: center;
-    margin-right: 2px;
     font-weight: bold;
     font-size: 1rem;
     line-height: 140%;
     align-self: baseline; // Fix height when parent is a flex element.
+    cursor: pointer;
 
     &, > .icon {
         box-shadow: 0 3px 0 rgba(#fff, 0.1) inset;
     }
 
-    &:last-of-type {
-        margin-right: 0;
+    // Spacing between buttons, but not around standalone buttons.
+    & + .button {
+        margin-left: 2px;
     }
 
     &.icon {
